    CGAL.


* 2D and 3D Geometry Kernel

  - Fix a bug in the Segment_3-Triangle_3 intersection function in the case the
    segment is collinear with a triangle edge..


* Algebraic Kernel

  - Avoids linking error "duplicate symbols" when two compilation units using
    the algebraic kernel are linked.


* 2D Mesh Generation

  - Fix a compilation error in the header <CGAL/Mesh_2/Do_not_refine_edges.h&gt
    when g++ version 4.7 is used.


* Surface Mesh Generation and 3D Mesh Generation

  - Fix an important bug in the CGAL_ImageIO library, that could lead to wrong
    result when meshing from a 3D image.

  - Fix the compilation of the demo in demo/Surface_mesher, when Boost version
    1.48 or 1.49 is used.


* 3D Boolean Operations on Nef Polygons Embedded on the Sphere

  - Fix a memory leak due to the usage of an internal mechanism that has been
    replaced by boost::any. This also influences the packages 2D Boolean
    Operations on Nef Polygons, 3D Boolean Operations on Nef Polyhedra, Convex
    Decomposition of Polyhedra, and 3D Minkowski Sum of Polyhedra.


* Surface Mesh Parameterization

  - Fixed a memory leak.


* 2D Arrangement

  - Fixed several memory leaks.


-------------------------------- Release 4.0 --------------------------------

Release date: March 2012

CGAL 4.0 offers the following improvements and new functionality :


* License Changes
The whole CGAL-3.x series was released under a combination of LGPLv2 (for the
foundations of CGAL), and QPL (for the high-level packages). QPL was the former
license of the graphical toolkit Qt, but that license is not supported by any
major free software project. Furthermore, the terms of the LGPLv2 license are
ambiguous for a library of C++ templates, like CGAL.

The CGAL project, driven by the CGAL Editorial Board, has decided to change the
license scheme of CGAL. We increased the major number of the CGAL version to
'4' in order to reflect this license change. The CGAL-4.x series is released
under: