@@ -155,6 +155,8 @@ the following has been changed since CGAL-4.0:</p>
 <h3>Surface Mesh Parameterization</h3>
 <ul>
 <li>Fixed a memory leak.</li>
+<li>Fix a compatibility issue with Eigen-3.1 of <code>Eigen_solver_traits</code>. This fix also affects the usage of 
+that class in the package <i>Surface Reconstruction from Point Sets</i>.</li>
 </ul>
 
 <h3>2D Arrangement</h3>
